# embedded-morse

./: Cargo.toml  README.md
.github/workflows/: action.yml
src/: lib.rs
