[package]
name = "embedded-morse"
version = "0.1.0"
authors = ["David Sawatzke <d-git@sawatzke.dev>"]
edition = "2018"
categories = ["embedded", "no-std"]
keywords = ["embedded-hal-driver"]
description = "A driver for morse output on embedded platforms"
documentation = "https://docs.rs/crate/embedded-morse"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/david-sawatzke/embedded-morse"

[dependencies]
embedded-hal = "0.2.3"
switch-hal = "0.3.2"
